# ansible-module-shellmarks

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  README_template.rst  bashmarks.sh  description  playbook.yml  pyproject.toml  setup.cfg  setup.py  shellmarks.py  shellmarks.sh  test_shellmarks.py  tox.ini
.github/workflows/: publish-to-pypi.yml
doc/source/: Makefile  conf.py  index.rst
docs/: conf.py
test/: _helper.py  test_class_shellmark_entries.py  test_function_subprocess.py  test_integration.py  test_integration_cleanup.py  test_integration_replace_home.py  test_integration_sorted.py  test_integration_sorted_true.py  test_integration_state_present.py  test_shellmarks.py
test/files/: sdirs
tests/: _helper.py  test_class_entry.py  test_class_shellmark_entries.py  test_functional_subprocess.py  test_integration.py  test_integration_cleanup.py  test_integration_delete_duplicates.py  test_integration_replace_home.py  test_integration_sorted.py  test_integration_state_absent.py  test_integration_state_present.py
tests/files/: sdirs
typings/ansible/module_utils/: basic.pyi
